# gdatasea

./: .gitignore  README.md  pyproject.toml
gdatasea/: __init__.py  database.py  models.py  schema.py
